[project]
name = "erpaas"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "andykr1k", email = "69021102+andykr1k@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["uv_build>=0.11.1,<0.12.0"]
build-backend = "uv_build"
